@@ -5,6 +5,7 @@ git-annex (10.20250321) UNRELEASED; urgency=medium
     the git-annex branch.
   * Fix build without the assistant.
   * fsck: Avoid complaining about required content of dead repositories.
+  * drop: Avoid redundant object directory thawing.
 
  -- Joey Hess <id@joeyh.name>  Fri, 21 Mar 2025 12:27:11 -0400
 
